# claude-code-desktop

./: .cc-prompt-align-design.md  .cc-prompt-execute-design.md  .cc-prompt-final-design.md  .cc-prompt-fix-ui.md  .cc-prompt-rebuild.md  .gitignore  AGENTS.md  CLAUDE.md  README.md  TESTING.md  index.html  nexus-verify.txt  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
.omc/: project-memory.json
_bmad/bmm/: config.yaml
docs/: INSTALL_GUIDE.md  NEXUS_IMPROVEMENT_PLAN.md  README.md  agent-first-workflow.md  architecture-v4-chat-ui.md  architecture.md  cc-task-backend-integration.md  ccbp-methodology.md  coding-standards.md  harness-supplementary-methods.md  openclaw-bridge-architecture.md  openclaw-bridge-requirements.md  openclaw-exec-api-research.md  ui-design-spec.md  ui-redesign-v3.md  ui-redesign-v4-strict.md  ui-redesign-v4.md  v2-dev-task.md
electron/: claude-direct.ts  log-capture.ts  main.ts  preload.ts
scripts/: screenshot.sh  test-committed.mjs
src/: index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  error.rs  lib.rs  main.rs
src-tauri/src/cli/: bridge.rs  mod.rs  parser.rs
src-tauri/src/commands/: app_commands.rs  mod.rs  pane.rs  project.rs  session.rs  settings.rs  slash_commands.rs  tab.rs
src-tauri/src/core/: mod.rs  output_parser.rs  pane_manager.rs  process_pool.rs  session_manager.rs  stream_handler.rs  tab_manager.rs
src-tauri/src/db/: connection.rs  migrations.rs
(+146 files in other folders)
